--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -102,3 +102,6 @@ key_bindings:
   - { key: Backslash, mods: Alt|Shift, chars: "\x1b|"                       } # Alt + |
 scrolling:
   history: 500
+colors:
+  primary:
+    background: "#1E1E2E" # base
