--- a/helix/config.toml
+++ b/helix/config.toml
@@ -6,6 +6,7 @@ gutters = ["spacer", "diagnostics", "spacer", "diff", "line-numbers", "spacer"]
 color-modes = true
 cursorline = true
 idle-timeout = 50
+true-color=true
 completion-trigger-len = 1
 
 [editor.cursor-shape]
