--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,5 @@
 fg="#CBCCC6"
-bg="#212732"
+bg="#262626"
 status_bg="#34455A"
 border_fg="#70748C"
 border_active_fg="#FECB6E"
@@ -10,6 +10,8 @@ set -g status-style "bg=$status_bg,fg=$fg"
 set -g status-right "%A, %B %d %l:%M %p "
 set -g status-left ' [#S] '
 set -g status-left-length 32
+set-option -g default-terminal 'tmux-256color'
+set -as terminal-overrides ",alacritty*:Tc"
 
 set -g pane-active-border-style "bg=default fg=$status_bg"
 set -g pane-border-style "bg=default fg=$status_bg"
