--- a/helix/languages.toml
+++ b/helix/languages.toml
@@ -6,3 +6,31 @@ diagnostic-severity = "Hint"
 
 [[language]]
 name = "rust"
+
+[[language]]
+name = "typescript"
+language-servers = ["tsserver", "eslint"]
+
+[[language]]
+name = "tsx"
+language-servers = ["tsserver", "eslint"]
+
+[language-server.eslint]
+args = ["--stdio"]
+command = "vscode-eslint-language-server"
+
+[language-server.eslint.config]
+format = true
+nodePath = ""
+onIgnoredFiles = "off"
+packageManager = "npm"
+quiet = false
+rulesCustomizations = []
+run = "onType"
+useESLintClass = false
+validate = "on"
+codeAction = { disableRuleComment = { enable = true, location = "separateLine" }, showDocumentation = { enable = true } }
+codeActionOnSave = { mode = "all" }
+experimental = { }
+problems = { shortenToSingleLine = false }
+workingDirectory = { mode = "auto" }
