--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,8 +1,6 @@
 fg="#CBCCC6"
 bg="#262626"
-status_bg="#34455A"
-border_fg="#70748C"
-border_active_fg="#FECB6E"
+status_bg="#333333"
 status_left_bg="#FFA759"
 
 set -g mouse on
